# CleanEmon-Backend

./: .gitignore  CleanEmonBackend.API.service  clean-db.cfg  setup.cfg
CleanEmonBackend/: __init__.py
CleanEmonBackend/API/: API.py  app_factory.py
CleanEmonBackend/Disaggregator/: inference.py  preparation.py  service.py
CleanEmonBackend/lib/: DBConnector.py
CleanEmonBackend/tests/test_API/: test_API.py
CleanEmonBackend/tests/test_Disaggregator/: conftest.py  energy_data.json  test_inference.py  test_preparation.py  test_service.py
CleanEmonBackend/tests/test_lib/: test_DBConnector.py
src/CleanEmonBackend/: __init__.py  __main__.py
src/CleanEmonBackend/API/: API.py  app_factory.py  queery_parameters_model.py  service.py
src/CleanEmonBackend/Devices/: devices.py
src/CleanEmonBackend/Disaggregator/: __init__.py  inference.py  service.py
src/CleanEmonBackend/lib/: DBConnector.py  authenticator_config.py  exceptions.py  plots.py
src/CleanEmonBackend/scripts/: disaggregate.py
src/CleanEmonBackend/tests/test_Disaggregator/: energy_data.json
