[metadata]
name = CleanEmon-Backend
version = 0.6.67
author = George Vasiliadis
author_email = geor.vasiliadis@gmail.com
description = A package providing all server-side artifacts of CleanEmon ecosystem

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    fastapi
    uvicorn
    pytest
    pandas
    numpy
    matplotlib
    compress_json
    CleanEmon-Core
include_package_data = True

[options.packages.find]
where = src
